--- a/lib/shiftplaner_web_web/templates/layout/admin_layout.html.eex
+++ b/lib/shiftplaner_web_web/templates/layout/admin_layout.html.eex
@@ -41,6 +41,7 @@
 
             <ul class="nav navbar-nav">
               <li> <%= link "Personen", to: person_path(@conn, :index) %> </li>
+              <li><%= link "Events", to: event_path(@conn, :index) %></li>
 
             </ul>
           </div><!-- /.navbar-collapse -->
