--- a/lib/shiftplaner_web_web/templates/weekend/edit.html.eex
+++ b/lib/shiftplaner_web_web/templates/weekend/edit.html.eex
@@ -1,5 +1,5 @@
 <h2>Edit Weekend</h2>
 
-<%= render "form.html", Map.put(assigns, :action, event_weekend_path(@conn, :update, @weekend)) %>
+<%= render "form.html", Map.put(assigns, :action, event_weekend_path(@conn, :update, @event.id, @weekend.id)) %>
 
-<span><%= link "Back", to: event_weekend_path(@conn, :index, @event) %></span>
+<span><%= link "Back", to: event_weekend_path(@conn, :index, @event.id) %></span>
