--- a/lib/shiftplaner_web_web/templates/weekend/index.html.eex
+++ b/lib/shiftplaner_web_web/templates/weekend/index.html.eex
@@ -1,25 +1,33 @@
-<h2>Listing Weekends</h2>
+<h2>Liste aller Wochenenden für Event: <%= @event.name %></h2>
 
 <table class="table">
-  <thead>
+    <thead>
     <tr>
-      <th>von</th>
-      <th>bis</th>
+        <th>Name</th>
+        <th>von</th>
+        <th>bis</th>
     </tr>
-  </thead>
-  <tbody>
-<%= for weekend <- @weekends do %>
+    </thead>
+    <tbody>
+    <%= for weekend <- @weekends do %>
     <tr>
-      <td><%= weekend_from(weekend) %></td>
-      <td><%= weekend_to(weekend) %></td>
-      <td class="text-right">
-        <span><%= link "Show", to: event_weekend_path(@conn, :show, @event_id, weekend), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Edit", to: event_weekend_path(@conn, :edit, @event_id, weekend), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Delete", to: event_weekend_path(@conn, :delete, @event_id, weekend), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
-      </td>
+        <td><%= weekend.name %></td>
+        <td><%= weekend_from(weekend) %></td>
+        <td><%= weekend_to(weekend) %></td>
+        <td class="text-right">
+            <span><%= link "Show", to: event_weekend_path(@conn, :show, @event.id, weekend), class: "btn btn-default btn-xs" %></span>
+            <span><%= link "Edit", to: event_weekend_path(@conn, :edit, @event.id, weekend), class: "btn btn-default btn-xs" %></span>
+            <span><%= link "Delete", to: event_weekend_path(@conn, :delete, @event.id, weekend), method: :delete, data: [confirm: "Wochenende wirklich löschen?"], class: "btn btn-danger btn-xs" %></span>
+        </td>
     </tr>
-<% end %>
-  </tbody>
+    <% end %>
+    </tbody>
 </table>
 
-<span><%= link "New Weekend", to: event_weekend_path(@conn, :new, @event_id) %></span>
+
+<span>
+    <%= link "Neues Wochenende hinzufügen", to: event_weekend_path(@conn, :new, @event.id), class: "btn btn-default" %>
+</span>
+<span>
+    <%= link "Zurück zum Event: " <> @event.name, to: event_path(@conn, :show, @event.id), class: "btn btn-default pull-right" %>
+</span>
