--- a/lib/shiftplaner_web_web/templates/weekend/index.html.eex
+++ b/lib/shiftplaner_web_web/templates/weekend/index.html.eex
@@ -16,6 +16,7 @@
         <td><%= weekend_to(weekend) %></td>
         <td class="text-right">
             <span><%= link "Show", to: event_weekend_path(@conn, :show, @event.id, weekend), class: "btn btn-default btn-xs" %></span>
+            <span><%= link "List days", to: event_weekend_day_path(@conn, :index, @event.id, weekend), class: "btn-default btn btn-xs" %></span>
             <span><%= link "Edit", to: event_weekend_path(@conn, :edit, @event.id, weekend), class: "btn btn-default btn-xs" %></span>
             <span><%= link "Delete", to: event_weekend_path(@conn, :delete, @event.id, weekend), method: :delete, data: [confirm: "Wochenende wirklich löschen?"], class: "btn btn-danger btn-xs" %></span>
         </td>
