implemantation for persons

--- a/lib/shiftplaner_web_web/templates/front/index.html.eex
+++ b/lib/shiftplaner_web_web/templates/front/index.html.eex
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>SchrÃ¶ter Schichtplan Mosel-Wein-Nachts-Markt 2016</title>
+    <title>Schröter Schichtplan Mosel-Wein-Nachts-Markt 2017</title>
     <link rel="stylesheet" href="/css/app.css">
 </head>
 
