--- a/lib/shiftplaner_web_web/templates/person/index.html.eex
+++ b/lib/shiftplaner_web_web/templates/person/index.html.eex
@@ -1,26 +1,36 @@
-<h2>Benutzerliste</h2>
-
-<span><%= link "Neuen Benutzer anlegen", to: person_path(@conn, :create), class: "btn btn-default" %></span>
+<h2>Listing Persons</h2>
 
 <table class="table">
-    <thead>
+  <thead>
     <tr>
-        <th>Nachnahme</th>
-        <th>Vorname</th>
-        <th>Aktionen</th>
-    </tr>
-    </thead>
-    <tbody>
-    <%= for person <- @persons do %>
-    <tr>
-        <td><%= person.sure_name %></td>
-        <td><%= person.first_name %></td>
-        <td class="text-right">
-            <span><%= link "Editieren", to: person_path(@conn, :edit, person), class: "btn btn-default btn-xs" %></span>,
-            <span><%= link "Löschen", to: person_path(@conn, :delete, person), method: :delete, data: [confirm: "Person wirklich löschen?"], class: "btn btn-danger btn-xs" %></span>,
-            <span>Verfügbarkeiten</span></td>
-    </tr>
-    <% end %>
-    </tbody>
+      <th>First name</th>
+      <th>Sure name</th>
+      <th>Email</th>
+      <th>Phone</th>
+      <th>Is griller</th>
+      <th>Verfügbarkeit</th>
 
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+<%= for person <- @persons do %>
+    <tr>
+      <td><%= person.first_name %></td>
+      <td><%= person.sure_name %></td>
+      <td><%= person.email %></td>
+      <td><%= person.phone %></td>
+      <td><%= person.is_griller %></td>
+      <td title="Verfübare Schichten / Disponierte Schichten"><%= availabiltiy(person) %></td>
+
+      <td class="text-right">
+        <span><%= link "Show", to: person_path(@conn, :show, person), class: "btn btn-default btn-xs" %></span>
+        <span><%= link "Edit", to: person_path(@conn, :edit, person), class: "btn btn-default btn-xs" %></span>
+        <span><%= link "Delete", to: person_path(@conn, :delete, person), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
+      </td>
+    </tr>
+<% end %>
+  </tbody>
 </table>
+
+<span><%= link "New Person", to: person_path(@conn, :new) %></span>
