--- a/lib/shiftplaner_web_web/templates/layout/admin_layout.html.eex
+++ b/lib/shiftplaner_web_web/templates/layout/admin_layout.html.eex
@@ -40,6 +40,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav">
+              <li> <%= link "Verfügbarkeiten", to: availability_path(@conn, :index) %></li>
               <li> <%= link "Personen", to: person_path(@conn, :index) %> </li>
               <li><%= link "Events", to: event_path(@conn, :index) %></li>
 
