--- a/lib/shiftplaner_web_web/templates/disposition/shift_edit.html.eex
+++ b/lib/shiftplaner_web_web/templates/disposition/shift_edit.html.eex
@@ -15,6 +15,8 @@
                 <% end %>
             <% end %>
         </div>
+        <%= link "Abbrechen", to: disposition_path(@conn, :shift_index,  @event_id, @weekend_id, @day.id), class: "btn btn-default btn-danger" %>
+        <%= submit "Schicht Disposition speichern", class: "btn btn-default btn-success pull-right" %>
         <% end %>
     <% end %>
 </div>
