--- a/lib/shiftplaner_web_web/templates/layout/admin_layout.html.eex
+++ b/lib/shiftplaner_web_web/templates/layout/admin_layout.html.eex
@@ -13,14 +13,6 @@
 
   <body>
     <div class="container">
-      <header class="header">
-        <nav role="navigation">
-          <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
-          </ul>
-        </nav>
-        <span class="logo"></span>
-      </header>
 
       <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -32,7 +24,9 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <%= link "Home", to: admin_path(@conn, :index), class: "navbar-brand" %>
+            <%= link to: admin_path(@conn, :index), class: "navbar-brand" do %>
+              <i class="fa fa-home" aria-hidden="true"></i> Home
+            <% end %>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,11 +34,28 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav">
-              <li> <%= link "Verfügbarkeiten", to: availability_path(@conn, :index) %></li>
-              <li> <%= link "Disposition", to: disposition_path(@conn, :event_index) %></li>
-              <li> <%= link "Personen", to: person_path(@conn, :index) %> </li>
-              <li><%= link "Events", to: event_path(@conn, :index) %></li>
+              <li>
+                <%= link to: availability_path(@conn, :index) do %>
+                  <i class="fa fa-check" aria-hidden="true"></i> Verfügbarkeiten
+                <% end %>
+              </li>
 
+              <li>
+                <%= link to: disposition_path(@conn, :event_index) do %>
+                <i class="fa fa-calendar-check-o" aria-hidden="true"></i> Disposition
+                <% end %>
+              </li>
+
+              <li>
+                <%= link to: person_path(@conn, :index) do %>
+                <i class="fa fa-user" aria-hidden="true"></i> Personen
+                <% end %>
+              </li>
+              <li>
+                <%= link to: event_path(@conn, :index) do %>
+                <i class="fa fa-calendar" aria-hidden="true"></i> Event
+                <% end %>
+              </li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
