--- a/lib/shiftplaner_web_web/templates/person/edit.html.eex
+++ b/lib/shiftplaner_web_web/templates/person/edit.html.eex
@@ -2,4 +2,8 @@
 
 <%= render "form.html", Map.put(assigns, :action, person_path(@conn, :update, @person)) %>
 
-<span><%= link "Back", to: person_path(@conn, :index) %></span>
+<span>
+    <%= link to: person_path(@conn, :index), class: "btn btn-default" do %>
+    <i class="fa fa-step-backward" aria-hidden="true"></i> Zurück
+    <% end %>
+</span>
