--- a/lib/shiftplaner_web_web/templates/day/edit.html.eex
+++ b/lib/shiftplaner_web_web/templates/day/edit.html.eex
@@ -1,5 +1,10 @@
-<h2>Edit Day</h2>
+<h2>Tag editieren</h2>
 
 <%= render "form.html", Map.put(assigns, :action, event_weekend_day_path(@conn, :update, @event_id, @weekend_id, @day)) %>
 
-<span><%= link "Back", to: event_weekend_day_path(@conn, :index, @event_id, @weekend_id) %></span>
+<span>
+    <%= link to: event_weekend_day_path(@conn, :index, @event_id, @weekend_id), class: "btn btn-default" do %>
+    <i class="fa fa-step-backward" aria-hidden="true"></i> Zurück
+    <% end %>
+</span>
+
