--- a/lib/shiftplaner_web_web/templates/day/form.html.eex
+++ b/lib/shiftplaner_web_web/templates/day/form.html.eex
@@ -6,12 +6,14 @@
   <% end %>
 
   <div class="form-group">
-    <%= label f, :date, class: "control-label" %>
+    <%= label f, :date, "Datum", class: "control-label" %>
     <%= date_select f, :date, class: "form-control" %>
     <%= error_tag f, :date %>
   </div>
 
-  <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
-  </div>
+<div class="form-group">
+  <%= submit class: "btn btn-primary pull-right" do %>
+  <i class="fa fa-user" aria-hidden="true"></i> Speichern
+  <% end %>
+</div>
 <% end %>
