--- a/lib/shiftplaner_web_web/templates/day/index.html.eex
+++ b/lib/shiftplaner_web_web/templates/day/index.html.eex
@@ -3,7 +3,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Date</th>
+      <th>Datum</th>
 
       <th></th>
     </tr>
@@ -14,15 +14,41 @@
       <td><%= day.date %></td>
 
       <td class="text-right">
-        <span><%= link "Show", to: event_weekend_day_path(@conn, :show, @event_id, @weekend.id, day), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Show shifts", to: event_weekend_day_shift_path(@conn, :index, @event_id, @weekend.id, day), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Edit", to: event_weekend_day_path(@conn, :edit, @event_id, @weekend.id, day), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Delete", to: event_weekend_day_path(@conn, :delete, @event_id, @weekend.id, day), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
+        <span>
+        <%= link to: event_weekend_day_path(@conn, :show, @event_id, @weekend.id, day), class: "btn btn-default btn-xs" do %>
+        <i class="fa fa-eye" aria-hidden="true"></i> Show
+        <% end %>
+        </span>
+        <span>
+          <%= link to: event_weekend_day_shift_path(@conn, :index, @event_id, @weekend.id, day), class: "btn btn-default btn-xs" do %>
+            <i class="fa fa-list" aria-hidden="true"></i> List Shifts
+          <% end %>
+        </span>
+        <span>
+          <%= link to: event_weekend_day_path(@conn, :edit, @event_id, @weekend.id, day), class: "btn btn-default btn-xs" do %>
+            <i class="fa fa-pencil" aria-hidden="true"></i> Edit
+          <% end %>
+        </span>
+        <span>
+          <%= link to: event_weekend_day_path(@conn, :delete, @event_id, @weekend.id, day), method: :delete, data: [confirm: "Möchten sie den Tag #{day.date} wirklich löschen?"], class: "btn btn-danger btn-xs" do %>
+            <i class="fa fa-trash" aria-hidden="true"></i> Delete
+          <% end %>
+        </span>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
-<span><%= link "Neuen Tag zum Wochenende hinzufügen", to: event_weekend_day_path(@conn, :new, @event_id, @weekend.id), class: "btn btn-default" %></span>
-<span><%= link "Züruck zur Wochenendliste", to: event_weekend_path(@conn, :index, @event_id), class: "btn btn-default pull-right" %></span>
+
+<span>
+    <%= link to: event_weekend_day_path(@conn, :new, @event_id, @weekend.id), class: "btn btn-default pull-right" do %>
+    <i class="fa fa-calendar-plus-o" aria-hidden="true"></i> Neuen Tag zum Wochenende hinzufügen
+    <% end %>
+</span>
+<span>
+    <%= link to: event_weekend_path(@conn, :index, @event_id), class: "btn btn-default" do %>
+    <i class="fa fa-step-backward" aria-hidden="true"> </i> Züruck zur Wochenendliste
+    <% end %>
+</span>
+
