--- a/lib/shiftplaner_web_web/templates/event/new.html.eex
+++ b/lib/shiftplaner_web_web/templates/event/new.html.eex
@@ -1,5 +1,10 @@
-<h2>New Event</h2>
+<h2>Neues Event erstellen</h2>
 
 <%= render "form.html", Map.put(assigns, :action, event_path(@conn, :create)) %>
 
-<span><%= link "Back", to: event_path(@conn, :index) %></span>
+<span>
+    <%= link to: event_path(@conn, :index), class: "btn btn-default" do %>
+    <i class="fa fa-step-backward" aria-hidden="true"></i> Zurück
+    <% end %>
+</span>
+
