--- a/lib/shiftplaner_web_web/templates/shift/edit.html.eex
+++ b/lib/shiftplaner_web_web/templates/shift/edit.html.eex
@@ -1,5 +1,9 @@
-<h2>Edit Shift</h2>
+<h2>Schicht bearbeiten</h2>
 
 <%= render "form.html", Map.put(assigns, :action, event_weekend_day_shift_path(@conn, :update, @event_id, @weekend_id, @day_id, @shift)) %>
 
-<span><%= link "Back", to: event_weekend_day_shift_path(@conn, :index, @event_id, @weekend_id, @day_id) %></span>
+<span>
+    <%= link to: event_weekend_day_shift_path(@conn, :index, @event_id, @weekend_id, @day_id), class: "btn btn-default" do %>
+    <i class="fa fa-step-backward" aria-hidden="true"></i> Zurück
+    <% end %>
+</span>
