--- a/lib/shiftplaner_web_web/templates/shift/form.html.eex
+++ b/lib/shiftplaner_web_web/templates/shift/form.html.eex
@@ -6,30 +6,32 @@
   <% end %>
 
   <div class="form-group">
-    <%= label f, :worker_needed, class: "control-label" %>
+    <%= label f, :worker_needed, "Benötigte Arbeiter", class: "control-label" %>
     <%= number_input f, :worker_needed, class: "form-control" %>
     <%= error_tag f, :worker_needed %>
   </div>
 
   <div class="form-group">
-    <%= label f, :griller_needed, class: "control-label" %>
+    <%= label f, :griller_needed,"Benötigte Griller", class: "control-label" %>
     <%= number_input f, :griller_needed, class: "form-control" %>
     <%= error_tag f, :griller_needed %>
   </div>
 
   <div class="form-group">
-    <%= label f, :start_time, class: "control-label" %>
+    <%= label f, :start_time,"Anfangszeit", class: "control-label" %>
     <%= time_select f, :start_time, class: "form-control" %>
     <%= error_tag f, :start_time %>
   </div>
 
   <div class="form-group">
-    <%= label f, :end_time, class: "control-label" %>
+    <%= label f, :end_time, "Endzeit", class: "control-label" %>
     <%= time_select f, :end_time, class: "form-control" %>
     <%= error_tag f, :end_time %>
   </div>
 
-  <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
-  </div>
+<div class="form-group">
+  <%= submit class: "btn btn-primary pull-right" do %>
+  <i class="fa fa-user" aria-hidden="true"></i> Speichern
+  <% end %>
+</div>
 <% end %>
