--- a/lib/shiftplaner_web_web/templates/shift/index.html.eex
+++ b/lib/shiftplaner_web_web/templates/shift/index.html.eex
@@ -1,12 +1,12 @@
-<h2>Listing Shifts</h2>
+<h2>Schichtenliste</h2>
 
 <table class="table">
   <thead>
     <tr>
-      <th>Worker needed</th>
-      <th>Griller needed</th>
-      <th>Start time</th>
-      <th>End time</th>
+      <th>Arbeiter benötigt</th>
+      <th>Griller benötigt</th>
+      <th>Anfangszeit</th>
+      <th>Endzeit</th>
 
       <th></th>
     </tr>
@@ -20,13 +20,34 @@
       <td><%= shift.end_time %></td>
 
       <td class="text-right">
-        <span><%= link "Show", to: event_weekend_day_shift_path(@conn, :show, @event_id, @weekend_id, @day_id, shift), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Edit", to: event_weekend_day_shift_path(@conn, :edit, @event_id, @weekend_id, @day_id, shift), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Delete", to: event_weekend_day_shift_path(@conn, :delete, @event_id, @weekend_id, @day_id, shift), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
+          <span>
+        <%= link to: event_weekend_day_shift_path(@conn, :show, @event_id, @weekend_id, @day_id, shift), class: "btn btn-default btn-xs" do %>
+        <i class="fa fa-eye" aria-hidden="true"></i> Show
+        <% end %>
+        </span>
+        <span>
+          <%= link to: event_weekend_day_shift_path(@conn, :edit, @event_id, @weekend_id, @day_id, shift), class: "btn btn-default btn-xs" do %>
+            <i class="fa fa-pencil" aria-hidden="true"></i> Edit
+          <% end %>
+        </span>
+        <span>
+          <%= link to: event_weekend_day_shift_path(@conn, :delete, @event_id, @weekend_id, @day_id, shift), method: :delete, data: [confirm: "Möchten sie die Schicht wirklich löschen?"], class: "btn btn-danger btn-xs" do %>
+            <i class="fa fa-trash" aria-hidden="true"></i> Delete
+          <% end %>
+        </span>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
-<span><%= link "New Shift", to: event_weekend_day_shift_path(@conn, :new, @event_id, @weekend_id, @day_id) %></span>
+<span>
+    <%= link to: event_weekend_day_shift_path(@conn, :new, @event_id, @weekend_id, @day_id), class: "btn btn-default pull-right" do %>
+    <i class="fa fa-plus" aria-hidden="true"></i> Neuen Schicht hinzufügen
+    <% end %>
+</span>
+<span>
+    <%= link to: event_weekend_day_path(@conn, :index, @event_id, @weekend_id), class: "btn btn-default" do %>
+    <i class="fa fa-step-backward" aria-hidden="true"> </i> Züruck zur Tagesliste
+    <% end %>
+</span>
