--- a/lib/shiftplaner_web_web/templates/shift/new.html.eex
+++ b/lib/shiftplaner_web_web/templates/shift/new.html.eex
@@ -1,5 +1,10 @@
-<h2>New Shift</h2>
+<h2>Neue Schicht anlegen</h2>
 
 <%= render "form.html", Map.put(assigns, :action, event_weekend_day_shift_path(@conn, :create, @event_id, @weekend_id, @day_id)) %>
 
-<span><%= link "Back", to: event_weekend_day_shift_path(@conn, :index, @event_id, @weekend_id, @day_id) %></span>
+
+<span>
+    <%= link to: event_weekend_day_shift_path(@conn, :index, @event_id, @weekend_id, @day_id), class: "btn btn-default" do %>
+    <i class="fa fa-step-backward" aria-hidden="true"></i> Zurück
+    <% end %>
+</span>
