--- a/lib/shiftplaner_web_web/templates/weekend/form.html.eex
+++ b/lib/shiftplaner_web_web/templates/weekend/form.html.eex
@@ -6,12 +6,14 @@
   <% end %>
 
   <div class="form-group">
-    <%= label f, :name, class: "control-label" %>
+    <%= label f, :name, "Wochenendname", class: "control-label" %>
     <%= text_input f, :name, class: "form-control" %>
     <%= error_tag f, :name %>
   </div>
 
-  <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
-  </div>
+<div class="form-group">
+  <%= submit class: "btn btn-primary pull-right" do %>
+  <i class="fa fa-user" aria-hidden="true"></i> Speichern
+  <% end %>
+</div>
 <% end %>
