--- a/lib/shiftplaner_web_web/templates/weekend/new.html.eex
+++ b/lib/shiftplaner_web_web/templates/weekend/new.html.eex
@@ -1,5 +1,10 @@
-<h2>New Weekend</h2>
+<h2>Neuen Wochenende hinzufügen</h2>
 
 <%= render "form.html", Map.put(assigns, :action, event_weekend_path(@conn, :create, @event)) %>
 
-<span><%= link "Back", to: event_weekend_path(@conn, :index, @event) %></span>
+<span>
+    <%= link to: event_weekend_path(@conn, :index, @event), class: "btn btn-default" do %>
+    <i class="fa fa-step-backward" aria-hidden="true"></i> Zurück
+    <% end %>
+</span>
+
