--- a/lib/shiftplaner_web_web/templates/front/index.html.eex
+++ b/lib/shiftplaner_web_web/templates/front/index.html.eex
@@ -4,6 +4,7 @@
 <head>
     <title>Schröter Schichtplan Mosel-Wein-Nachts-Markt 2017</title>
     <link rel="stylesheet" href="/css/app.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
