--- a/lib/shiftplaner_web_web/templates/disposition/weekend_index.html.eex
+++ b/lib/shiftplaner_web_web/templates/disposition/weekend_index.html.eex
@@ -15,7 +15,11 @@
         <td><%= weekend_from(weekend) %></td>
         <td><%= weekend_to(weekend) %></td>
         <td class="text-right">
-            <span><%= link "Tage anzeigen", to: disposition_path(@conn, :day_index, @event.id, weekend.id), class: "btn btn-default btn-xs" %></span>
+            <span>
+              <%= link to: disposition_path(@conn, :day_index, @event.id, weekend.id), class: "btn btn-default btn-xs" do %>
+                <i class="fa fa-list" aria-hidden="true"></i> Tage anzeigen
+              <% end %>
+            </span>
         </td>
     </tr>
     <% end %>
@@ -24,5 +28,7 @@
 
 
 <span>
-    <%= link "Zurück zum Event: " <> @event.name, to: disposition_path(@conn, :event_index), class: "btn btn-default pull-right" %>
+    <%= link  to: disposition_path(@conn, :event_index), class: "btn btn-default" do %>
+      <i class="fa fa-step-backward" aria-hidden="true"></i> Zurück zum Event:  <%= @event.name %>
+    <% end %>
 </span>
