--- a/lib/shiftplaner_web_web/templates/disposition/day_index.html.eex
+++ b/lib/shiftplaner_web_web/templates/disposition/day_index.html.eex
@@ -3,7 +3,7 @@
 <table class="table">
     <thead>
     <tr>
-        <th>Date</th>
+        <th>Tage</th>
 
         <th></th>
     </tr>
@@ -11,15 +11,23 @@
     <tbody>
     <%= for day <- @days do %>
     <tr>
-        <td><%= day.date %></td>
+        <td><%= date_to_string(day.date) %></td>
 
         <td class="text-right">
-            <span><%= link "Show shifts", to: disposition_path(@conn, :shift_index, @event_id, @weekend.id, day.id), class: "btn btn-default btn-xs" %></span>
+            <span>
+          <%= link to: disposition_path(@conn, :shift_index, @event_id, @weekend.id, day.id), class: "btn btn-default btn-xs" do %>
+            <i class="fa fa-list" aria-hidden="true"></i> Zeige Schichten
+          <% end %>
+        </span>
         </td>
     </tr>
     <% end %>
     </tbody>
 </table>
 
+<span>
+    <%= link  to: disposition_path(@conn, :weekend_index, @event_id), class: "btn btn-default" do %>
+      <i class="fa fa-step-backward" aria-hidden="true"></i> Züruck zur Wochenendliste
+    <% end %>
+</span>
 
-<span><%= link "Züruck zur Wochenendliste", to: disposition_path(@conn, :weekend_index, @event_id), class: "btn btn-default pull-right" %></span>
