--- a/lib/shiftplaner_web_web/templates/front/day.html.eex
+++ b/lib/shiftplaner_web_web/templates/front/day.html.eex
@@ -1,4 +1,4 @@
-<div class="day"><span class="day-title"><%= day_of_week(@day) %></span>
+<div class="day"><span class="day-title"><%= day_of_week(@day) %> <%= date_to_short_string(@day.date)%> </span>
     <%= for shift <- @day.shifts do %>
         <%= render "shift.html", shift: shift %>
     <% end %>
